# nwg-shell_slackbuilds

./: .gitignore  GITHUB_URLs.txt  LICENSE  README  README.md  SBo  SwayNotificationCenter.tar.xz  TODO  build-nwg-shell.sh  build-nwg-shell.sqf  doinst.sh  papirus-icon-theme.tar.xz  slackware.patch  slurp.tar.xz  swappy.tar.xz  swayidle.tar.xz  swaylock.tar.xz  xdg-desktop-portal-wlr.tar.xz
FontAwesome/: FontAwesome.SlackBuild  FontAwesome.info
SwayNotificationCenter/: README  SwayNotificationCenter.SlackBuild  SwayNotificationCenter.info  slack-desc  slack-required
_x86_64-current/: CHECKSUMS.md5  CHECKSUMS.md5.asc  CHECKSUMS.md5.gz.asc  ChangeLog.txt  FILELIST.TXT  GPG-KEY  MANIFEST.bz2  PACKAGES.TXT  SwayNotificationCenter-0.7.3-x86_64-1_nwg.lst  SwayNotificationCenter-0.7.3-x86_64-1_nwg.txt  SwayNotificationCenter-0.7.3-x86_64-1_nwg.txz  SwayNotificationCenter-0.7.3-x86_64-1_nwg.txz.asc  SwayNotificationCenter-0.7.3-x86_64-1_nwg.txz.md5  azote-1.9.7-x86_64-1_nwg.lst  azote-1.9.7-x86_64-1_nwg.txt  azote-1.9.7-x86_64-1_nwg.txz.asc  azote-1.9.7-x86_64-1_nwg.txz.md5  brightnessctl-0.5.1-x86_64-1_nwg.lst  brightnessctl-0.5.1-x86_64-1_nwg.txt  brightnessctl-0.5.1-x86_64-1_nwg.txz  brightnessctl-0.5.1-x86_64-1_nwg.txz.asc  brightnessctl-0.5.1-x86_64-1_nwg.txz.md5  fcft-3.1.5-x86_64-1_nwg.lst  fcft-3.1.5-x86_64-1_nwg.txt  fcft-3.1.5-x86_64-1_nwg.txz  fcft-3.1.5-x86_64-1_nwg.txz.asc  fcft-3.1.5-x86_64-1_nwg.txz.md5  feh-3.9.1-x86_64-1_nwg.lst  feh-3.9.1-x86_64-1_nwg.txt  feh-3.9.1-x86_64-1_nwg.txz  feh-3.9.1-x86_64-1_nwg.txz.asc  feh-3.9.1-x86_64-1_nwg.txz.md5  foot-1.13.1-x86_64-1_nwg.lst  foot-1.13.1-x86_64-1_nwg.txt  foot-1.13.1-x86_64-1_nwg.txz  foot-1.13.1-x86_64-1_nwg.txz.asc  foot-1.13.1-x86_64-1_nwg.txz.md5  glm-0.9.9.5-x86_64-1_nwg.lst  glm-0.9.9.5-x86_64-1_nwg.txt  glm-0.9.9.5-x86_64-1_nwg.txz  (+316 more)
appstream/: appstream.SlackBuild  appstream.info  slack-required
aquamarine/: README  aquamarine.SlackBuild  aquamarine.info  slack-desc
azote/: azote.SlackBuild  azote.info  slack-desc  slack-required
blueprint-compiler/: blueprint-compiler.SlackBuild  blueprint-compiler.info  slack-required
brightnessctl/: README  brightnessctl.SlackBuild  brightnessctl.info  man-dir-fix.patch  slack-desc
cliphist/: cliphist.SlackBuild  slack-desc
ddcutil/: ddcutil.SlackBuild  ddcutil.info
fcft/: fcft.SlackBuild  fcft.info  slack-desc  slack-required
feh/: feh-3.9.1.tar.bz2  feh.SlackBuild  feh.info
foot/: README  foot.SlackBuild  foot.info  slack-required
gammastep/: gammastep.SlackBuild  gammastep.info
geoclue2/: geoclue2.SlackBuild  geoclue2.info
geopy/: geopy.info
glaze/: README  glaze.SlackBuild  glaze.info  slack-desc
glm/: glm.SlackBuild  glm.info
google-go-lang/: google-go-lang.SlackBuild  google-go-lang.info  slack-desc
gopsuinfo/: gopsuinfo.SlackBuild  gopsuinfo.info  slack-desc  vendor.tar.xz
granite/: granite.SlackBuild
granite7/: README  granite7.SlackBuild  granite7.info  slack-desc
greetd/: README  doinst.sh  greetd.SlackBuild  greetd.conf  greetd.csh  greetd.info  greetd.info.old  greetd.pam  greetd.sysusers  rc.4.greetd
grim/: grim.SlackBuild  grim.info  slack-desc
gtk-layer-shell/: doinst.sh  gtk-layer-shell.SlackBuild  gtk-layer-shell.info
gtk-session-lock/: gtk-session-lock.SlackBuild  slack-desc
gtk4-layer-shell/: gtk4-layer-shell.SlackBuild  gtk4-layer-shell.info  slack-desc
gtklock/: gtklock.SlackBuild  gtklock.SlackBuild.old  gtklock.info  makefile.patch  makefile.slk  slack-desc  slack-paths.patch
gtklock-playerctl-module/: gtklock-playerctl-module.SlackBuild  gtklock-playerctl-module.info  makefile.patch  slack-required
gtklock-powerbar-module/: gtklock-powerbar-module.SlackBuild  gtklock-powerbar-module.info  makefile.patch
gtklock-userinfo-module/: README  gtklock-userinfo-module.SlackBuild  gtklock-userinfo-module.info  makefile.patch
gtksourceview4/: gtksourceview4.SlackBuild
hyprcursor/: README  hyprcursor.SlackBuild  hyprcursor.info  slack-desc
hyprgraphics/: README  hyprgraphics.SlackBuild  hyprgraphics.info  slack-desc
hyprland-protocols/: README  hyprland-protocols.SlackBuild  hyprland-protocols.info  slack-desc
hyprland-qt-support/: README  hyprland-qt-support.SlackBuild  (+3 more)
imlib2/imlib2-1.10.0/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  imlib2.pc  imlib2.spec.in  libtool
imlib2/imlib2-1.10.0/data/: Makefile  Makefile.in
imlib2/imlib2-1.10.0/data/fonts/: Makefile  Makefile.am  Makefile.in
imlib2/imlib2-1.10.0/data/images/: Makefile  Makefile.am  Makefile.in
imlib2/imlib2-1.10.0/doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  imlib2_intro.dox
imlib2/imlib2-1.10.0/m4/: ec_asan.m4  ec_warnflags.m4
imlib2/imlib2-1.10.0/src/: Makefile  Makefile.am  Makefile.in
imlib2/imlib2-1.10.0/src/lib/: Imlib2.h  Imlib2.h.in  Imlib2_Loader.h  Makefile  Makefile.am  Makefile.in  api.c  api.h  api_filter.c  api_obsolete.c  api_text.c  api_x11.c  asm_c.c  asm_c.h  asm_rotate.S  asm_scale.S  blend.c  blend.h  color_helpers.c  color_helpers.h  colormod.c  colormod.h  common.h  debug.c  debug.h  draw_ellipse.c  draw_line.c  draw_polygon.c  draw_rectangle.c  dynamic_filters.c  dynamic_filters.h  file.c  file.h  filter.c  filter.h  font.h  font_draw.c  font_load.c  font_main.c  font_query.c  (+39 more)
imlib2/imlib2-1.10.0/src/modules/: Makefile  Makefile.am  Makefile.in
imlib2/imlib2-1.10.0/src/modules/filters/: Makefile  Makefile.am  Makefile.in  filter_bumpmap.c  filter_colormod.c  filter_common.h  filter_test.c
imlib2/imlib2-1.10.0/src/modules/loaders/: Makefile  Makefile.am  Makefile.in  decompress_load.c  exif.c  exif.h  loader_ani.c  loader_argb.c  loader_bmp.c  loader_bz2.c  loader_ff.c  loader_gif.c  loader_heif.c  loader_ico.c  loader_id3.c  loader_j2k.c  loader_jpeg.c  loader_jxl.c  loader_lbm.c  loader_lzma.c  loader_png.c  loader_pnm.c  loader_ps.c  loader_svg.c  loader_tga.c  loader_tiff.c  loader_webp.c  loader_xbm.c  loader_xpm.c  loader_zlib.c
imlib2/imlib2-1.10.0/test/: Makefile  Makefile.in
(+444 files in other folders)
